tools/tests/errors/circular_import_a.ki
var b = import("circular_import_b")
var x = 1
